force-app/main/default/objects/BLN_BU__mdt/BLN_BU__mdt.object-meta.xml
<CustomObject>
    <description>FOUK- 3416 Business Unit Metadata</description>
    <label>BU</label>
    <pluralLabel>BUs</pluralLabel>
</CustomObject>