force-app/main/default/objects/BLN_BU__mdt/fields/BLN_BrandName__c.field-meta.xml
<CustomField>
    <fullName>BLN_BrandName__c</fullName>
    <description>FOUK-6305 - Holding the name of BU Brand</description>
    <label>Brand Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>