force-app/main/default/objects/BLN_BU__mdt/fields/BLN_BUSpecificDefaultAssistDuration__c.field-meta.xml
<CustomField>
    <fullName>BLN_BUSpecificDefaultAssistDuration__c</fullName>
    <label>BU Specific Default Assist duration(min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>