force-app/main/default/objects/BLN_BU__mdt/fields/BLN_BUSpecificStockCollectionTime__c.field-meta.xml
<CustomField>
    <fullName>BLN_BUSpecificStockCollectionTime__c</fullName>
    <label>BU Specific Stock Collection Time(min)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>