force-app/main/default/objects/BLN_BU__mdt/fields/BLN_Country__c.field-meta.xml
<CustomField>
    <fullName>BLN_Country__c</fullName>
    <label>Country</label>
    <length>60</length>
    <type>Text</type>
</CustomField>